# codex

./: .gitignore
docs/: harness-feishu-cs-poc-spec.md
emotion_agent/: app.py  config.py  emotion_agent_spec.md  emotion_analyzer.py  prompts.py  requirements.txt  response_generator.py  start_emotion_agent.command  strategy_engine.py  utils.py
feishu_bot/: .env.example  README.md  main.py  requirements.txt  start.sh
private-ai-app/: .gitignore  CODEX_PROMPT.md  README.md  admin.html  docker-compose.yml  index.html
private-ai-app/backend/: .env.example  .env.local.example  Dockerfile  README.md  requirements.txt
private-ai-app/backend/app/: db.py  main.py  models.py  schemas.py
private-ai-app/backend/app/api/: admin.py  auth.py  chat.py  conversations.py  health.py  models.py  router.py  usage.py
private-ai-app/backend/app/core/: config.py  security.py
private-ai-app/backend/scripts/: bootstrap_admin.py  promote_admin.py  smoke_local.py
private-ai-app/desktop/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json
private-ai-app/desktop/src/: App.tsx  main.tsx
private-ai-app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
private-ai-app/docs/: acceptance-checklist.md  day1-execution-report-2026-03-14.md  day2-execution-report-2026-03-15.md  day3-execution-report-2026-03-15.md  internal-beta-runbook.md  smoke-log-template.md
private-ai-app/scripts/: build_mac_launcher.sh  env_doctor.sh  open_app_local.command  open_app_local.sh  push_private_ai.sh  run_backend_local.sh  run_smoke_local.sh
(+41 files in other folders)
